--- a/repetition-03_10_2018/build.gradle
+++ b/repetition-03_10_2018/build.gradle
@@ -13,3 +13,8 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
     compile 'org.testng:testng:6.14.3'
 }
+
+
+test{
+    useTestNG()
+}
