--- a/addressbook-selenium-tests/build.gradle
+++ b/addressbook-selenium-tests/build.gradle
@@ -13,3 +13,10 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
     compile 'org.testng:testng:6.14.3'
 }
+
+
+test {
+    useTestNG{
+        suites'src/test/resources/testng.xml'
+    }
+}
