--- a/repetition-03_10_2018/build.gradle
+++ b/repetition-03_10_2018/build.gradle
@@ -16,5 +16,10 @@ dependencies {
 
 
 test{
-    useTestNG()
+    useTestNG(){
+        suites 'src/test/resources/testng.xml'
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
 }
